# soma

./: .env.example  .gitattributes  .gitignore  01_deployment_cleanup_and_setup.sh  02_deployment_local_kind_serve.sh  Makefile  README.md  docker-compose.yml  environment.yaml  generate_data.py  pyproject.toml  requirements.txt
.github/workflows/: cd-manual.yml  ci.yml
config/: logging.yml  model_config.yml  settings.py
data/: soma.duckdb
dbt/: dbt_project.yml  packages.yml  profiles.yml
dbt/models/: sources.yml
deployment/docker/: Dockerfile.api  Dockerfile.web  Dockerfile.workers
deployment/k8s/: deploy-local.sh
deployment/scripts/: start-scheduler.sh  start-worker.sh
docs/: README.md  _config.yml  architecture.md  configuration.md  data-pipeline.md  development.md  index.md  installation.md  testing.md  troubleshooting.md  web-interface.md
docs/api/: README.md
docs/deployment/: README.md
docs/ml-models/: README.md  demand-forecasting.md  recommendation-engine.md
notebooks/: 01_data_exploration.ipynb
src/: __init__.py
src/api/: __init__.py  app.py  middleware.py
src/data/: __init__.py  generators.py  validators.py
src/models/: __init__.py  base.py
src/utils/: __init__.py  database.py  helpers.py  metrics.py
src/web/: gradio_app.py
src/workers/: __init__.py  celery.py  scheduler.py
tests/: conftest.py  pytest.ini  run_tests.sh  test_runner.py
tests/e2e/: test_complete_workflow.py  test_dbt_integration.py  test_performance.py
tests/integration/: test_api_endpoints.py  test_database_operations.py  test_model_training_pipeline.py
(+40 files in other folders)
