[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "soma-ml-platform"
version = "1.0.0"
description = "ML platform for demand forecasting and book recommendations"
authors = [
    {name = "Leonce Nshuti", email = "leoncen0@gmail.com"}
]
dependencies = [
    "pandas>=1.5.0",
    "numpy>=1.24.0",
    "scikit-learn>=1.3.0",
    "flask>=2.3.0",
    "duckdb>=0.8.0",
    "dbt-duckdb>=1.5.0",
    "gradio>=4.42.0",
    "pydantic>=2.0.0", 
    "pydantic-settings>=2.10.1",
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
    "faker>=19.0.0"
]

[project.optional-dependencies]
rag = [
    "openai>=0.28.0",
    "sentence-transformers>=2.2.0",
    "rank-bm25>=0.2.0"
]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.5.0"
]

[tool.black]
line-length = 88
target-version = ['py39']

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=src --cov-report=html"